--- a/config-templates/minimalConfigs/solanaConfig.toml
+++ b/config-templates/minimalConfigs/solanaConfig.toml
@@ -51,6 +51,9 @@ RootDir = '/chainlink'
  ChainID = '1666600000'
  Enabled = false
 
+[EVM.OCR]
+ ObservationGracePeriod = '550ms'
+
 [[EVM.Nodes]]
  Name = 'Solana_Mainnet_00_EVM_Node'
  WSURL = 'wss://'
