--- a/config-templates/veryVerboseConfigs/lineaConfig.toml
+++ b/config-templates/veryVerboseConfigs/lineaConfig.toml
@@ -1861,7 +1861,7 @@ HistoryDepth = 350
 #---------------------------#
 #          EVM OCR          #
 #---------------------------#
-[EVM.OCR]
+#[EVM.OCR]
 
 # ContractConfirmations
 # - ContractConfirmations sets OCR.ContractConfirmations for this EVM chain.
@@ -1873,13 +1873,13 @@ HistoryDepth = 350
 # - ContractTransmitterTransmitTimeout sets OCR.ContractTransmitterTransmitTimeout for this EVM chain.
 #
 # - Default is '10s'
-ContractTransmitterTransmitTimeout = '1s'
+#ContractTransmitterTransmitTimeout = '10s'
 
 # DatabaseTimeout
 # - DatabaseTimeout sets OCR.DatabaseTimeout for this EVM chain.
 #
 # - Default is '10s'
-DatabaseTimeout = '1s'
+#DatabaseTimeout = '1os'
 
 
 #---------------------------#
